# confidential_space

./: .goreleaser.yml  README.md
app/: .goreleaser.yml  BUILD.bazel  Dockerfile  WORKSPACE  claims.go  cloudbuild.yaml  cloudbuild_bazel.yaml  cloudbuild_kaniko.yaml  config.json  go.mod  go.sum  main.go  repositories.bzl
app/certs/: BUILD.bazel  root-ca-collaborator1.crt  root-ca-operator.crt  tee-collaborator1.crt  tee-collaborator1.key  tee-collaborator2.crt  tee-collaborator2.key  tee-operator.crt  tee-operator.key  tee.crt  tee.key
claims/: BUILD.bazel  WORKSPACE  claims.go  go.mod  repositories.bzl
cosign_verify/: policy.rego
http_client/: client.go  go.mod  go.sum
http_client/certs/: client-collaborator1.crt  client-collaborator1.key  client-collaborator2.crt  client-collaborator2.key  root-ca-collaborator2.crt
misc/: README.md
misc/aws-channel-jwt-credential/: README.md
misc/aws-channel-jwt-credential/credential/: cred.go  go.mod  go.sum
misc/aws-channel-jwt-credential/example/client/: Dockerfile  config  go.mod  go.sum  main.go
misc/aws-channel-jwt-credential/example/client/certs/: client-svc.key
misc/aws-channel-jwt-credential/example/server/: go.mod  go.sum  main.go
misc/aws-channel-jwt-credential/process/: go.mod  go.sum  main.go
misc/azure-channel-jwt-credential/: README.md
misc/azure-channel-jwt-credential/credential/: cred.go  go.mod  go.sum
misc/azure-channel-jwt-credential/example/client/: Dockerfile  go.mod  go.sum  main.go
misc/azure-channel-jwt-credential/example/client/certs/: client-svc.crt
misc/azure-channel-jwt-credential/example/server/: go.mod  go.sum  main.go
misc/azure-channel-jwt-credential/example/server/certs/: server.crt  server.key
misc/azure_containers/: README.md
misc/bazel_overrides/: README.md
misc/cncf_containers/: README.md
misc/container_signing/: README.md
misc/envoy_cs/: README.md  envoy-conf-cert-bound.yaml  envoy-conf-jwt.yaml
misc/envoy_cs/certs/: http-server.crt  http-server.key
misc/google_workspace/: README.md
misc/hashicorp_vault/: README.md
misc/kaniko_build/: README.md
misc/tee_bootstrap/: Dockerfile  README.md  go.mod  go.sum  main.go
misc/testtoken/: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl  token.go
misc/testtoken/cmd/: BUILD.bazel  main.go
misc/threshold_encryption_and_signatures/: README.md
pubsub_client/: go.mod  go.sum  main.go
