load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

exports_files(["config.json"])

go_binary(
    name = "main",
    out = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",     
)

container_image(
    name = "server",
    base = "@distroless_base//image",
    entrypoint = ["/server"],
    cmd = [],
    labels = {
        "tee.launch_policy.allow_cmd_override": "false",
        "tee.launch_policy.log_redirect": "always",
    },    
    files = [
        ":main",
        ":config.json", 
    ],
    ports = ["8081"],
    repository = "us-central1-docker.pkg.dev/builder-project/repo1/myimage",
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "claims.go",
    ],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_oauth2//google:go_default_library",
        "@com_github_golang_jwt_jwt//:go_default_library",
        "@com_github_lestrrat_go_jwx//jwk:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@com_google_cloud_go_pubsub//:go_default_library",
        "@com_google_cloud_go_kms//apiv1:go_default_library",
        "@com_google_cloud_go_kms//apiv1/kmspb:go_default_library",
        "@com_google_cloud_go_compute_metadata//:go_default_library",
        "@com_google_cloud_go_logging//:go_default_library",
        "@go_googleapis//google/api:monitoredres_go_proto",
    ],
)

