load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    importpath = "main",    
    srcs = [
        "main.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_salrashid123_confidential_space_claims//:go_default_library",
        "@com_github_golang_jwt_jwt_v5//:go_default_library",
    ],
)

